# DevOps-Project

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  blog.db  compose.yml  image_utils.py  main.py  models.py  pyproject.toml  schemas.py
.github/workflows/: deploy.yml
static/css/: main.css
templates/: home.html  layout.html  post.html
